# openwhisper

./: .gitignore  AGENT.md  README.md  openwhisper-mvp-spec.md  pyproject.toml  tasks.md
.claude/: settings.json
.claude/commands/: add-to-changelog.md  analyze-issue.md  bug-fix.md  check.md  clean.md  code-analysis.md  commit-fast.md  commit.md  context-prime.md  continuous-improvement.md  create-command.md  create-docs.md  cursor-rules-meta-guide.md  five.md  implement-task.md  mermaid.md  pr-review.md  update-docs.md
.claude/hooks/: append_ultrathink.py  format_python.sh
.devcontainer/: Dockerfile  devcontainer.json
config/: openwhisper.toml  openwhisper.toml.example
data/pronunciation/: minimal_pairs.json
data/pronunciation/paragraphs/: aesop-ant-grasshopper.txt  (+12 more)
docs/: mvp-validation.md  openwhisper-mvp-spec.md  pronunciation-prd.md  tasks.md  usage.md
openwhisper/: __init__.py  audio.py  cli.py  config.py  constants.py  diff.py  history.py  indicator.py  indicator_app.py  llama.py  output.py  parakeet.py  state.py  streamer.py  whisper.py
openwhisper/pronunciation/: __init__.py  drill.py  normalize.py  pairs.py  paragraphs.py  record.py  score.py  shadow.py  transcribe.py
scripts/: check_deps.py  claude_install_mcp_servers.sh  codex_install_mcp_servers.sh  setup-ydotool.sh
tests/: test_cli_autotype.py  test_cli_backend_helper.py  test_diff.py  test_indicator.py  test_output_autotype.py
tests/pronunciation/: test_cli_commands.py  test_drill.py  test_normalize.py  test_pairs.py  test_score.py  test_shadow.py  test_transcribe_dispatch.py
