[project]
name = "openwhisper"
version = "0.1.0"
description = "OpenWhisper MVP CLI"
readme = "README.md"
requires-python = ">=3.13"

[project.scripts]
openwhisper = "openwhisper.cli:main"

[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["openwhisper*"]

[tool.uv]
package = true

[dependency-groups]
dev = [
    "ruff>=0.15.0",
]
