[project]
name = "openwhisper"
version = "0.1.0"
description = "OpenWhisper MVP CLI"
readme = "README.md"
requires-python = ">=3.13"
license = { file = "LICENSE" }
authors = [
    { name = "v-bonilla", email = "v-bonilla@users.noreply.github.com" },
]

[project.scripts]
openwhisper = "openwhisper.cli:main"

[project.optional-dependencies]
parakeet = [
    "sherpa-onnx>=1.12",
    "sherpa-onnx-core>=1.12",
    "numpy>=2.0",
]

[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["openwhisper*"]

[tool.uv]
package = true

[dependency-groups]
dev = [
    "ruff>=0.15.0",
]
